translation(done)+all logic done

--- a/LibraryManagementSystem/wwwroot/translations/ar.json
+++ b/LibraryManagementSystem/wwwroot/translations/ar.json
@@ -42,6 +42,8 @@
     "StatusDataTable": "جدول بيانات الحالة",
     "RevenueDataTable": "جدول بيانات الإيرادات",
     "Count": "العدد",
-    "Revenue": "الإيرادات"
+    "Revenue": "الإيرادات",
+    "Sell": "بيع",
+    "Cancel":"الغاء"
   }
   
