intinal styles (custom)

--- a/LibraryManagementSystem/wwwroot/translations/ar.json
+++ b/LibraryManagementSystem/wwwroot/translations/ar.json
@@ -1,6 +1,6 @@
 {
     "WelcomeMessage": "مرحبًا بك في لوحة معلومات المكتبة",
-    "Status": "الحالة",
+    "Ss": "الحالة",
     "S": "الحالة",
     "LibraryManagementSystem": "نظام إدارة المكتبة",
     "Books": "الكتب",
